<resources>
    <string name="app_name">GChat</string>
    <string name="firebase_database_url">https://gchat-af243-default-rtdb.asia-southeast1.firebasedatabase.app/</string>
    <string name="facebook_app_id">746663553673574</string>
    <string name="fb_login_protocol_scheme">fb746663553673574</string>
    <string name="facebook_client_token">e5bb36829f35a2d56e5c7d35cce244f7</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t have an account</string>
    <string name="login_with">Login with</string>
    <string name="new_here">New Here?</string>
    <string name="register">Register</string>
    <string name="repassword">Repassword</string>
    <string name="alreadymember">Already member?</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="info">Personal Information</string>
    <!-- TODO: Remove or change this placeholder content -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Sign out</string>
    <string name="change_profile">Change profile</string>
    <string name="friend_request">Friend Requests</string>
    <string name="choose_camera_from">Choose camera from</string>
    <string name="birthday">Date of birth</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="self_introduction">Bio</string>
    <string name="save">Save</string>
    <string name="join_date">Joined Date</string>
    <string name="search_people">Search People</string>
    <string name="friend">Friends</string>
    <string name="message">Message</string>
    <string name="add_friend">Add Friend</string>
    <string name="profile">Profile</string>
    <string name="unfriend">Unfriend</string>
    <string name="friend_request_sent">Friend request sent</string>
    <string name="confirm">Accept</string>
    <string name="delete">Delete</string>
    <string name="sent_you_a_friend_request">sent you a friend request</string>
    <string name="create_group">Create Group</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="choose_image_from">Choose image from</string>
</resources>