<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">
        <View
            android:id="@+id/rectangle_1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_240sdp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/_minus60sdp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_minus60sdp"
            android:background="@drawable/rectangle_1"
            />

        <View
            android:id="@+id/rectangle_2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_240sdp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/_minus10sdp"
            android:layout_marginTop="@dimen/_31sdp"
            android:background="@drawable/rectangle_2" />
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rectangle_1"
            android:layout_marginLeft="@dimen/_21sdp"

            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/login"
            android:textSize="@dimen/_30sdp"
            android:textColor="@color/blue"
            android:fontFamily="@font/nunito_bold"
            android:gravity="top"
            />
        <TextView
            android:id="@+id/emailtv"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:layout_marginLeft="@dimen/_21sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/blue"
            android:fontFamily="@font/nunito_bold"
            />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailtv"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:background="@drawable/round_edittext"

            android:inputType="textEmailAddress"
            android:minHeight="48dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordtv"
            android:text="@string/password"
            android:layout_below="@id/editTextEmail"
            android:layout_marginLeft="@dimen/_21sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/blue"
            android:fontFamily="@font/nunito_bold"
            />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordtv"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:background="@drawable/round_edittext"

            android:inputType="textPassword"
            android:minHeight="48dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgotpasswordtv"
            android:text="@string/forgot_password"
            android:layout_below="@id/editTextPassword"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/blue"
            android:fontFamily="@font/nunito_bold"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayoutLogin"
            android:layout_below="@id/forgotpasswordtv"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/_20sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/donthaveaccounttv"
                android:text="@string/login_with"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/blue"/>

                <ImageButton
                    android:id="@+id/facebook_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@drawable/logos_facebook" />
        </LinearLayout>
        <View
            android:id="@+id/rectangle_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutLogin"
            android:layout_alignParentBottom="true"

            android:background="@drawable/rectangle_3"
            />
        <TextView
            android:id="@+id/newhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_21sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/new_here"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/nunito_light"
            />
        <TextView
            android:id="@+id/registertv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/newhere"
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/register"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/nunito_bold"
            />
        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/login"
            style="@style/MyButtonStyle"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_60sdp"/>

    </RelativeLayout>
