<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ViewProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:background="@color/grey_100">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear_layout_avatar_edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image_edit_profile"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_below="@id/registertv1"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/default_avata"
                        app:strokeColor="@color/blue" />


                </LinearLayout>



                <LinearLayout
                    android:id="@+id/old_info_edit_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_username_view_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="@dimen/_15sdp"
                        android:textColor="@android:color/black"
                        android:textSize="24sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/message"
                        android:visibility="gone"
                        android:textColor="@color/blue" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        style="?attr/materialButtonOutlinedStyle"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/add_friend"
                        android:textColor="@color/blue" />
                </LinearLayout>


            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_date"
            android:textSize="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/blue"
            android:fontFamily="@font/nunito_bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_join_date_view_profile"
            android:textSize="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textSize="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/blue"
            android:fontFamily="@font/nunito_bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_birthday"
                android:layout_marginStart="@dimen/_10sdp" />

            <TextView
                android:id="@+id/tv_birthday_view_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/blue"
            android:fontFamily="@font/nunito_bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_phone"
                android:layout_marginStart="@dimen/_10sdp" />

            <TextView
                android:id="@+id/tv_phone_view_profile"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_gravity="center" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/blue"
            android:fontFamily="@font/nunito_bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_address"
                android:layout_marginStart="@dimen/_10sdp" />

            <TextView
                android:id="@+id/tv_address_view_profile"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:inputType="text" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/blue"
            android:fontFamily="@font/nunito_bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_email"
                android:layout_marginStart="@dimen/_10sdp" />

            <TextView
                android:id="@+id/tv_email_view_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/self_introduction"
            android:textSize="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/blue"
            android:fontFamily="@font/nunito_bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_description"
                android:layout_marginStart="@dimen/_10sdp" />

            <TextView
                android:id="@+id/self_description_view_profile"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>